Make sure header boxshadow is not covered by content area

--- a/assets/sass/site/header/_header_builder_common.scss
+++ b/assets/sass/site/header/_header_builder_common.scss
@@ -2,6 +2,7 @@
 
 .site-header {
 	position: relative;
+	z-index: 10;
 	.customify-container {
 		display: flex;
 		flex-direction: column;
